deploy/weblogger/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weblogger-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: weblogger
    spec:
      containers:
      - name: weblogger-container
        image: jaymell/nodeskel:latest
        args: []
        ports:
        - name: http
          containerPort: 80
        resources:
          requests:
            cpu: "100m"
