deploy/weblogger/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weblogger-ingress
spec:
  backend:
    serviceName: weblogger-service
    servicePort: 80
